--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -83,6 +83,12 @@
         <h3 class="team-header pb-3 pt-5 hidden" style="color: black">CORPORATE PARTNERS</h3>
         <hr class="hidden" width="15%" style="border-width: 7px">
         <div class="mt-4 mb-5 hidden">
+            <a href="https://simbachain.com">
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/simbaChain.png"/> 
+            </a>
+            <a href="https://www.encode.club">
+                <img class="img-padding" style="width: 250px;" src="assets/images/logos/encodeClub.jpeg"/> 
+            </a>
             <a href="https://blockchainedu.org/">
                 <img class="img-padding" style="width: 250px;" src="assets/images/logos/blockchain-education-network.png"/>
             </a>
