--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -35,6 +35,14 @@
                 </a>
             </li>
             <li class="list-inline-item">
+                <a href="https://twitter.com/msu_blockchain">
+                    <span class="fa-stack fa-lg">
+                            <i class="fas fa-circle fa-stack-2x icon-background"></i>
+                            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                        </span>
+                </a>
+            </li>
+            <li class="list-inline-item">
                 <a href="https://www.facebook.com/msublockchain/">
                     <span class="fa-stack fa-lg">
                             <i class="fas fa-circle fa-stack-2x icon-background"></i>
